--- a/.github/workflows/windows-build-and-test.yml
+++ b/.github/workflows/windows-build-and-test.yml
@@ -2,8 +2,9 @@
 # SPDX-License-Identifier: GPL-2.0-or-later
 name: Windows Build and Test
 on:
-  pull_request:
-    types: [opened, synchronize, reopened]
+  # pull_request:
+  #   types: [opened, synchronize, reopened]
+  workflow_dispatch:
 jobs:
   build:
     name: Windows Build and Test
